--- a/src/index.css
+++ b/src/index.css
@@ -266,13 +266,14 @@
   border-radius: 6px;
   width:131px;
   height:37px;
+  margin-top:15px;
   /* padding: 12px 16px 12px 16px; */
 }
 
 .calendar-icon {
   position: absolute;
-  right: 20px;
-  top: 50%;
+  right: 10px;
+  top: 65% !important;
   transform: translateY(-50%);
   width: 18px;
   height: 18px;
@@ -320,12 +321,13 @@
 
 .date-input {
   padding-left: 13px;
-  width: 130px;
+  width: 140px;
   height: 38px;
   border: 1px solid rgba(217, 217, 217, 1) !important;
   background: var(--card-bg-color);
   border-radius: 5px;
-  margin: 10px;
+  position: relative;
+  /* margin: 10px; */
   /* font-size: small; */
 }
 
