--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,8 @@
   flex-direction: column; 
   /* border:1px solid grey; */
   border:none !important;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  filter:drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.1));
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05); */
   border-radius: 5px;
 
 }
