--- a/src/index.css
+++ b/src/index.css
@@ -184,17 +184,18 @@
   display: grid;
   grid-template-columns: 50px 1fr auto; /* <-- FLEXIBLE */
   align-items: center;
-  padding: 8px 5px;
+  padding: 8px 30px;
   border-bottom: 1px solid #f5f5f5;
   color: rgba(0, 0, 0, 1);
   background-color: rgba(253, 244, 241, 1);
   margin: 10px 0px;
   word-break: break-word; 
   overflow-wrap: break-word;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .rank-list li:first-child { /* Header row */
-  font-weight: bold;
   color: #e74c3c; /* Reddish color like in image */
   border-bottom: 2px solid #eee;
   padding-bottom: 10px;
@@ -205,12 +206,12 @@
 }
 .rank-list li span:nth-child(1) { /* Rank column */
  text-align: left;
- padding-left: 5px;
+ /* padding-left: 5px; */
 }
 .rank-list li span:nth-child(3) { /* Count/Steps column */
   text-align: right;
   font-weight: 600;
-  padding-right: 5px;
+  /* padding-right: 5px; */
 }
 
 
