--- a/src/index.css
+++ b/src/index.css
@@ -284,25 +284,50 @@
 }
 
 
-
 .header-right {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  max-width: fit-content; /* Let it take the space needed */
+  gap: 5px;
+  max-height:60px;
+}
+
+.user-icon-wrapper {
   position: relative;
-  padding-right: 10px;
+  align-items: center;
+  margin:auto;
+  cursor: pointer;
+  max-height:40px;
+  max-width:40px;
+  padding:5px;
 }
 
-.dropdown{
+
+
+.dropdown {
   background-color: white;
-  position:relative;
-  top:100px;
-  left:20px;
-
+  position: absolute;
+  top: 14px;
+  right: 100px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  width: 150px;
+  filter:drop-shadow(0px 2px 4px #0000001A);
+  gap: 5px;
+  padding: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 
-/* Control styles (for the input box) */
+.user-icon{
+  color: grey;
+  position: absolute;
+  left: 10px;
+  top: 100px;
+}
+
+
+
 .select__control {
   height: 40px !important; /* Adjusting height for visibility */
   width: 140px !important;
@@ -312,12 +337,11 @@
   overflow-y: hidden;
 }
 
-/* Menu styles (for the dropdown) */
 .select__menu {
   background-color: white !important; /* Set background to solid color */
   opacity: 1 !important; /* Remove transparency */
   box-shadow: none !important; /* Optional: remove shadow if any */
-  z-index:1;
+  z-index:100;
 }
 
 
@@ -326,8 +350,7 @@
   position: relative;
   left: 10px;
   top: 3px;
-  margin-left: 10px;
-}
+  }
 
 .date-input {
   padding-left: 13px;
@@ -355,6 +378,8 @@
   width: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
+  z-index:10;
+  position: relative;
 }
 
 .card {
